--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "classnames": "^2.3.1",
     "next": "10.2.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-number-format": "^4.5.5",
+    "sass": "^1.33.0"
   },
   "devDependencies": {
     "@types/react": "17.0.6",
