--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "mock-server": "json-server --watch ./db.json  --p 5050"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
+    "json-server": "^0.16.3",
     "next": "10.2.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
