--- a/package.json
+++ b/package.json
@@ -6,19 +6,36 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "mock-server": "json-server --watch ./db.json  --p 5050"
+    "mock-server": "json-server --watch ./db.json  --p 5050",
+    "server": "ts-node-dev --respawn --transpile-only ./server/index.ts"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "json-server": "^0.16.3",
+    "morgan": "^1.10.0",
     "next": "10.2.2",
+    "passport": "^0.4.1",
+    "passport-github": "^1.1.0",
+    "pg": "^8.6.0",
+    "pg-hstore": "^2.3.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-number-format": "^4.5.5",
-    "sass": "^1.33.0"
+    "sass": "^1.33.0",
+    "sequelize": "^6.6.2",
+    "ts-node-dev": "^1.1.6"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.12",
+    "@types/morgan": "^1.9.2",
+    "@types/node": "^15.6.1",
+    "@types/passport": "^1.0.6",
+    "@types/passport-github": "^1.1.5",
     "@types/react": "17.0.6",
     "typescript": "4.2.4"
   }
