--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-validator": "^6.12.0",
+    "js-cookie": "^2.2.1",
     "json-server": "^0.16.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "next": "10.2.2",
+    "nodemailer": "^6.6.2",
     "passport": "^0.4.1",
     "passport-github": "^1.1.0",
+    "passport-jwt": "^4.0.0",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
     "react": "17.0.2",
@@ -27,16 +32,22 @@
     "react-number-format": "^4.5.5",
     "sass": "^1.33.0",
     "sequelize": "^6.6.2",
+    "sharp": "^0.28.3",
     "ts-node-dev": "^1.1.6"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
+    "@types/js-cookie": "^2.2.6",
     "@types/morgan": "^1.9.2",
+    "@types/multer": "^1.4.5",
     "@types/node": "^15.6.1",
+    "@types/nodemailer": "^6.4.2",
     "@types/passport": "^1.0.6",
     "@types/passport-github": "^1.1.5",
+    "@types/passport-jwt": "^3.0.5",
     "@types/react": "17.0.6",
+    "@types/sharp": "^0.28.3",
     "typescript": "4.2.4"
   }
 }
